--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "analyze": "ANALYZE=true next build && cp -r .next/analyze/* public/",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,11 +14,8 @@
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^13.0.5",
-    "@types/node": "18.11.10",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
     "next": "13.0.5",
+    "null-loader": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "^15.5.0",
@@ -25,9 +23,14 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.0.5",
     "@types/mdx": "^2.0.3",
+    "@types/node": "18.11.10",
     "@types/react": "^18.0.25",
+    "@types/react-dom": "18.0.9",
     "@types/react-syntax-highlighter": "^15.5.5",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.5",
     "eslint-plugin-mdx": "^2.0.5"
   }
 }
