--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^13.0.5",
+    "@types/three": "^0.146.0",
     "next": "13.0.5",
     "null-loader": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
+    "three": "^0.147.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
