--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-type-animation": "^2.1.2",
     "remark-gfm": "^3.0.1",
     "three": "^0.147.0",
     "typescript": "4.9.3"
