--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^13.0.5",
+    "@react-three/fiber": "^8.9.1",
     "@types/three": "^0.146.0",
     "next": "13.0.5",
+    "nice-color-palettes": "^3.0.0",
     "null-loader": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
