--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^13.0.5",
+    "@react-three/cannon": "^6.5.0",
+    "@react-three/drei": "^9.46.4",
     "@react-three/fiber": "^8.9.1",
     "@types/three": "^0.146.0",
     "next": "13.0.5",
-    "nice-color-palettes": "^3.0.0",
+    "nice-color-palettes": "^2.0.0",
     "null-loader": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
