--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/rapier": "^0.11.1",
+    "@dimforge/rapier2d": "^0.10.0",
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^13.0.5",
-    "@react-three/cannon": "^6.5.0",
+    "@dimforge/rapier3d": "^0.9.0",
     "@react-three/drei": "^9.46.4",
     "@react-three/fiber": "^8.9.1",
     "@types/three": "^0.146.0",
