--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/rapier": "^0.11.1",
     "@dimforge/rapier2d": "^0.10.0",
+    "@dimforge/rapier3d": "^0.9.0",
     "@mdx-js/loader": "^2.1.5",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^13.0.5",
-    "@dimforge/rapier3d": "^0.9.0",
     "@react-three/drei": "^9.46.4",
     "@react-three/fiber": "^8.9.1",
+    "@react-three/rapier": "^0.11.1",
     "@types/three": "^0.146.0",
     "next": "13.0.5",
     "nice-color-palettes": "^2.0.0",
     "null-loader": "^4.0.1",
+    "peerjs": "^1.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "^15.5.0",
