--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-type-animation": "^2.1.2",
     "remark-gfm": "^3.0.1",
     "three": "^0.147.0",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.0.5",
