--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/fiber": "^8.9.1",
     "@react-three/rapier": "^0.11.1",
     "@types/three": "^0.146.0",
+    "@vercel/analytics": "^1.1.1",
     "next": "13.0.5",
     "nice-color-palettes": "^2.0.0",
     "null-loader": "^4.0.1",
