--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix && npm run fmt",
+    "fmt": "prettier --write .",
     "prepare": "husky install",
     "test": "echo \"TODO\""
   },
@@ -43,14 +44,17 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "husky": "^8.0.0",
     "postcss": "^8",
     "prettier": "3.1.1",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "husky": "^8.0.0"
+    "typescript": "^5.3.3"
   }
 }
