--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
-  "conventionalCommits.scopes": [
-    "all",
-    "dx"
-  ]
+  "conventionalCommits.scopes": ["all", "dx"],
+  "[markdown]": {
+    "editor.defaultFormatter": "unifiedjs.vscode-remark",
+    "editor.formatOnSave": true
+  },
+  "yaml.schemas": {
+    "http://json-schema.org/draft-07/schema#": ["content/**/*.schema.yaml"]
+  }
 }
