--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "plato",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,7 +10,7 @@
     "lint": "next lint --fix && npm run fmt",
     "fmt": "prettier --write .",
     "prepare": "husky install",
-    "test": "echo \"TODO\""
+    "test": "npm run lint"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.0",
@@ -27,6 +28,7 @@
     "@use-gesture/react": "^10.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
@@ -47,14 +49,39 @@
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "autoprefixer": "^10.0.1",
+    "dictionary-en-us": "^3.0.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-mdx": "^3.1.4",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.0",
     "postcss": "^8",
     "prettier": "3.1.1",
+    "remark": "^15.0.1",
+    "remark-cli": "^12.0.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-lint": "^9.1.2",
+    "remark-lint-frontmatter-schema": "^3.15.4",
+    "remark-mdx": "^3.0.0",
+    "remark-preset-lint-consistent": "^5.1.2",
+    "remark-preset-lint-markdown-style-guide": "^5.1.3",
+    "remark-preset-lint-recommended": "^6.1.3",
+    "remark-preset-prettier": "^2.0.1",
+    "remark-retext": "^6.0.0",
+    "remark-toc": "^9.0.0",
+    "retext-english": "^5.0.0",
+    "retext-repeated-words": "^5.0.0",
+    "retext-sentence-spacing": "^6.0.0",
+    "retext-spell": "^6.0.0",
+    "retext-syntax-urls": "^4.0.0",
+    "retext-usage": "^0.5.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "unified": "^11.0.4"
   }
 }
