--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   },
   "yaml.schemas": {
     "http://json-schema.org/draft-07/schema#": ["content/**/*.schema.yaml"]
-  }
+  },
+  "eslint.validate": ["markdown", "mdx"]
 }
