--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix && npm run fmt",
+    "lint": "next lint --fix --ext mdx --ext tsx --ext ts --ext js && npm run fmt",
     "fmt": "prettier --write .",
     "prepare": "husky install",
-    "test": "npm run lint"
+    "test": "echo hello"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "@next/bundle-analyzer": "^14.0.4",
     "@next/mdx": "^14.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -23,7 +24,6 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toggle": "^1.0.3",
     "@react-three/fiber": "^8.15.13",
-    "@types/mdx": "^2.0.10",
     "@types/three": "^0.160.0",
     "@use-gesture/react": "^10.3.0",
     "class-variance-authority": "^0.7.0",
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/mdx": "^2.0.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -54,7 +55,7 @@
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-mdx": "^3.1.4",
+    "eslint-plugin-mdx": "^3.1.5",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-unused-imports": "^3.0.0",
@@ -67,6 +68,7 @@
     "remark-gfm": "^4.0.0",
     "remark-lint": "^9.1.2",
     "remark-lint-frontmatter-schema": "^3.15.4",
+    "remark-lint-no-duplicate-headings-in-section": "^3.1.2",
     "remark-mdx": "^3.0.0",
     "remark-preset-lint-consistent": "^5.1.2",
     "remark-preset-lint-markdown-style-guide": "^5.1.3",
