--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,8 @@
   "yaml.schemas": {
     "http://json-schema.org/draft-07/schema#": ["content/**/*.schema.yaml"]
   },
-  "eslint.validate": ["markdown", "mdx"]
+  "eslint.validate": ["markdown", "mdx"],
+  "auto-close-tag.activationOnLanguage": ["mdx"],
+  "mdx.server.enable": true,
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
