chore(mdx): improve mdx lint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "conventionalCommits.scopes": ["all", "dx"],
+  "conventionalCommits.scopes": ["all", "dx", "mdx"],
   "[markdown]": {
     "editor.defaultFormatter": "unifiedjs.vscode-remark",
     "editor.formatOnSave": true
