--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix --ext mdx --ext tsx --ext ts --ext js && npm run fmt",
+    "lint": "next lint --fix --ext mdx --ext tsx --ext ts --ext js --no-cache && npm run fmt",
     "fmt": "prettier --write .",
     "prepare": "husky install",
     "test": "echo hello"
@@ -67,8 +67,14 @@
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
     "remark-lint": "^9.1.2",
+    "remark-lint-blockquote-indentation": "^3.1.2",
     "remark-lint-frontmatter-schema": "^3.15.4",
+    "remark-lint-no-dead-urls": "^1.1.0",
     "remark-lint-no-duplicate-headings-in-section": "^3.1.2",
+    "remark-lint-no-empty-sections": "^4.0.0",
+    "remark-lint-no-empty-url": "^3.1.2",
+    "remark-lint-no-url-trailing-slash": "^3.0.1",
+    "remark-lint-write-good": "^1.2.0",
     "remark-mdx": "^3.0.0",
     "remark-preset-lint-consistent": "^5.1.2",
     "remark-preset-lint-markdown-style-guide": "^5.1.3",
