--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "autoprefixer": "^10.0.1",
+    "dictionary-en": "^4.0.0",
     "dictionary-en-us": "^3.0.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
@@ -83,8 +84,12 @@
     "remark-retext": "^6.0.0",
     "remark-toc": "^9.0.0",
     "retext-english": "^5.0.0",
+    "retext-indefinite-article": "^5.0.0",
+    "retext-passive": "^5.0.0",
+    "retext-readability": "^8.0.0",
     "retext-repeated-words": "^5.0.0",
     "retext-sentence-spacing": "^6.0.0",
+    "retext-simplify": "^8.0.0",
     "retext-spell": "^6.0.0",
     "retext-syntax-urls": "^4.0.0",
     "retext-usage": "^0.5.0",
