--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,12 @@
       "name": "Development server",
       "request": "launch",
       "type": "node-terminal"
+    },
+    {
+      "name": "Astro: debug client-side",
+      "type": "chrome",
+      "request": "launch",
+      "url": "http://localhost:4321"
     }
   ]
 }
