--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@astrojs/sitemap": "^3.0.4",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/ts-plugin": "^1.4.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-three/fiber": "^8.15.14",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/three": "^0.160.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "@use-gesture/react": "^10.3.0",
     "astro": "^4.1.3",
     "class-variance-authority": "^0.7.0",
@@ -33,10 +35,10 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.160.0",
-    "typescript": "^5.3.3",
-    "usehooks-ts": "^2.9.4"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
     "eslint-plugin-astro": "^0.31.3",
