--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/ts-plugin": "^1.4.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@react-three/fiber": "^8.15.14",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
@@ -30,6 +31,7 @@
     "lucide-react": "^0.311.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
