--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
-  "extends": "astro/tsconfigs/strictest", //TODO: diff rules from strict
-  // "extends": "astro/tsconfigs/strict",
+  "extends": "astro/tsconfigs/strictest",
   "exclude": ["_next_implementation/", "node_modules/", "dist/", "public/"],
   "compilerOptions": {
     "jsx": "react-jsx",
