--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro check && astro dev",
-    "build": "astro check && astro build",
+    "dev": "npm run lint && astro dev",
+    "build": "npm run lint && astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "lint": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\" && eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\""
+    "lint": "prettier --write  \"**/*.{js,jsx,ts,tsx,md,mdx,astro}\" && eslint --fix \"src/**/*.{js,ts,jsx,tsx,astro}\" && astro check && remark src/content/**/*.mdx"
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
@@ -28,11 +27,32 @@
     "astro": "^4.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dictionary-en": "^4.0.0",
     "lucide-react": "^0.314.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-type-animation": "^3.2.0",
+    "remark-cli": "^12.0.0",
+    "remark-lint-no-dead-urls": "^1.1.0",
+    "remark-lint-no-duplicate-headings-in-section": "^3.1.2",
+    "remark-lint-no-empty-sections": "^4.0.0",
+    "remark-lint-no-empty-url": "^3.1.2",
+    "remark-lint-no-url-trailing-slash": "^3.0.1",
+    "remark-lint-write-good": "^1.2.0",
+    "remark-mdx": "^3.0.0",
+    "remark-preset-lint-consistent": "^5.1.2",
+    "remark-preset-lint-markdown-style-guide": "^5.1.3",
+    "remark-preset-lint-recommended": "^6.1.3",
+    "remark-preset-prettier": "^2.0.1",
+    "remark-retext": "^6.0.0",
+    "retext-english": "^5.0.0",
+    "retext-indefinite-article": "^5.0.0",
+    "retext-passive": "^5.0.0",
+    "retext-readability": "^8.0.0",
+    "retext-repeated-words": "^5.0.0",
+    "retext-simplify": "^8.0.0",
+    "retext-spell": "^6.0.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
