--- a/subPackages/falling-sand/package.json
+++ b/subPackages/falling-sand/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wasm-falling-sand": "file:./wasm-falling-sand/pkg"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
