--- a/subPackages/falling-sand/package.json
+++ b/subPackages/falling-sand/package.json
@@ -4,14 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm:dev:vite\" \"npm:dev:wasm\"",
+    "dev": "concurrently \"npm:dev:vite\" \"npm:dev:wasm\" --kill-others -c \"auto\"",
     "dev:vite": "vite",
     "dev:wasm": "cd wasm-falling-sand && cargo watch -i .gitignore -i \"pkg/*\" -s \"wasm-pack build --dev\"",
     "build": "npm run build:wasm && npm run build:vite",
     "build:vite": "tsc && vite build",
     "build:wasm": "cd wasm-falling-sand && wasm-pack build --release",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "cd wasm-falling-sand && wasm-pack build"
   },
   "dependencies": {
     "react": "^18.2.0",
